--- a/PetStoreUI/Pages/Help/Help.cshtml
+++ b/PetStoreUI/Pages/Help/Help.cshtml
@@ -1,4 +1,4 @@
-@page
+﻿@page "/Help"
 @model PetStoreUI.Pages.HelpModel
 @{
     ViewData["Title"] = "Help";
@@ -25,9 +25,6 @@
     </li>
     <li><strong>Proceed to Checkout:</strong>
         <p>When you’re ready to buy, click on the shopping cart icon at the top of the page and click "Proceed to Checkout."</p>
-    </li>
-    <li><strong>Complete Your Purchase:</strong>
-        <p>Enter your shipping information and payment details to finalize your order.</p>
     </li>
 </ul>
 <p><strong>Contact:</strong></p>
