--- a/PetStoreReact/src/styles/EditPopup.css
+++ b/PetStoreReact/src/styles/EditPopup.css
@@ -12,7 +12,7 @@
   z-index: 1000; /* Ensure the popup is above other content */
 }
 
-.popup-inner {
+.popup-content {
   background: white;
   padding: 20px;
   border-radius: 10px;
@@ -20,17 +20,17 @@
   max-width: 80%;
 }
 
-.popup-inner h2 {
+.popup-content h3 {
   margin-top: 0;
 }
 
-.popup-inner label {
+.popup-content label {
   display: block;
   margin-bottom: 10px;
   text-align: left; /* Align labels to the left */
 }
 
-.popup-inner input {
+.popup-content input {
   width: 100%;
   padding: 8px;
   margin-top: 5px;
@@ -39,7 +39,7 @@
   border-radius: 5px;
 }
 
-.popup-inner button {
+.popup-content button {
   margin-right: 10px;
   padding: 10px 20px;
   border: none;
@@ -49,6 +49,6 @@
   border-radius: 5px;
 }
 
-.popup-inner button:hover {
+.popup-content button:hover {
   background-color: #0056b3;
 }
